<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" 
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
        android:gravity="top" 
        android:orientation="vertical" 
        android:paddingLeft="20.0dip" 
        android:paddingRight="20.0dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content">
        <TextView 
            android:textSize="22.0sp" 
            android:id="@+id/H1" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="10.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:text="@string/help1" />
        <!-- <ImageView android:id="@id/H1img" android:layout_height="70.0dip" android:layout_marginLeft="9.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="9.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/distances_min" android:contentDescription="@string/helps1" /> -->
        <TextView 
            android:textSize="16.0sp" 
            android:id="@+id/T1" 
            android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
            android:layout_marginBottom="10.0dip" 
            android:text="@string/help2" 
            android:textIsSelectable="true" />
        <View 
            style="@style/HelpPageDivider" />
        <TextView 
            android:textSize="22.0sp" 
            android:id="@+id/H2" 
            android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
            android:layout_marginTop="8.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:text="@string/help3" />
        <!-- <ImageView android:id="@id/H2img" android:layout_height="80.0dip" android:layout_marginLeft="9.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="9.0dip" android:layout_marginBottom="2.0dip" android:src="@drawable/lightning_min" android:contentDescription="@string/helps3" /> -->
        <TextView 
            android:textSize="16.0sp" 
            android:id="@+id/T2" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="10.0dip" 
            android:text="@string/help4" 
            android:textIsSelectable="true" />
        <View 
            style="@style/HelpPageDivider" />
        <TextView 
            android:textSize="22.0sp" 
            android:id="@+id/H3" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="8.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:text="@string/help5" />
        <!-- <ImageView android:id="@id/H3img" android:layout_height="80.0dip" android:layout_marginLeft="9.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="9.0dip" android:layout_marginBottom="2.0dip" android:src="@drawable/focus_min" android:contentDescription="@string/helps5" /> -->
        <TextView 
            android:textSize="16.0sp" 
            android:id="@+id/T3" 
            android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
            android:layout_marginBottom="10.0dip" 
            android:text="@string/help6" 
            android:textIsSelectable="true" />
        <View 
            style="@style/HelpPageDivider" />
        <TextView 
            android:textSize="22.0sp" 
            android:id="@+id/H4" 
            android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
            android:layout_marginTop="8.0dip" 
            android:layout_marginBottom="5.0dip" 
            android:text="@string/help7" />
        <!-- <ImageView android:id="@id/H4img" android:layout_height="80.0dip" android:layout_marginLeft="9.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="9.0dip" android:src="@drawable/shake_min" android:contentDescription="@string/helps7" /> -->
        <TextView 
            android:textSize="16.0sp" 
            android:id="@+id/T4" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="10.0dip" 
            android:text="@string/help8" 
            android:textIsSelectable="true" />
    </LinearLayout>
</ScrollView>